# codegrapher

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
agents/: code-explorer.md
commands/: index.md  query.md  validate-skills.md
control_plane/: api.py  graph.py  graph_enricher.py  packs.py  ranking.py  synopses.py
core/: artifact_io.py  ast_walker.py  call_resolver.py  config.py  external_tools.py  indexer.py  json_config_indexer.py  persistence.py  query_engine.py  schema.py  skeleton_builder.py  skill_validator.py
skills/code-graph/: SKILL.md
